--- a/ContosoUniversity/Content/Site.css
+++ b/ContosoUniversity/Content/Site.css
@@ -99,7 +99,7 @@ header .nav li.active ul.dropdown-menu li a:hover,
 header .nav li.active ul.dropdown-menu li.active a{
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
-    -ms-transition: all .3s ease;
+
     -o-transition: all .3s ease;
     transition: all .3s ease;
 }
@@ -110,7 +110,6 @@ header .navbar-default .navbar-nav > .open > a:hover,
 header .navbar-default .navbar-nav > .open > a:focus {
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
-    -ms-transition: all .3s ease;
     -o-transition: all .3s ease;
     transition: all .3s ease;
 }
@@ -119,6 +118,13 @@ header .navbar-nav > li.active {
     background: #DE3B69;
     color: #fff;
 }
+header .navbar-nav > li { 
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease;
+}
+
 header .navbar {
     min-height: 70px;
     padding: 0;
