--- a/ContosoUniversity/Views/Home/About.cshtml
+++ b/ContosoUniversity/Views/Home/About.cshtml
@@ -3,32 +3,6 @@
 @{
     ViewBag.Title = "Student Body Statistics";
 }
-  <!-- start header -->
-        <header>
-            <div class="navbar navbar-default navbar-static-top">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="index.html"><img src="~/img/logo.png" alt="logo" /></a>
-                    </div>
-                    <div class="navbar-collapse collapse ">
-                        <ul class="nav navbar-nav">
-                            <li>@Html.ActionLink("首页", "Index" ,"Home")</li>
-						     <li >@Html.ActionLink("课程", "Index", "Course")</li>
-                            <li>@Html.ActionLink("剪影", "Gallery", "Gallery")</li>
-                            <li  class="active">@Html.ActionLink("关于我们", "About", "Home")</li>
-                 
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <!-- end header -->     
-
 
 <section id="inner-headline">
     <div class="container">
@@ -250,3 +224,6 @@
 
     </div>
 </section>
+<script>
+    $(active(3));
+</script>
