--- a/ContosoUniversity/Views/Course/Index.cshtml
+++ b/ContosoUniversity/Views/Course/Index.cshtml
@@ -3,59 +3,120 @@
 @{
     ViewBag.Title = "Courses";
 }
+<section id="inner-headline">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="pageTitle">About Us</h2>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="content">
+    <div class="container">
+        <div class="row">
 
-<h2>Courses</h2>
+            <p>
+                @Html.ActionLink("Create New", "Create")
+            </p>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+            @using (Html.BeginForm())
+            {
+                <p>
+                    Select Department: @Html.DropDownList("SelectedDepartment", "All")
+                    <input type="submit" value="Filter" />
+                </p>
+            }
 
-@using (Html.BeginForm())
-{
-    <p>
-        Select Department: @Html.DropDownList("SelectedDepartment", "All")
-        <input type="submit" value="Filter" />
-    </p>
-}
+            <table class="table">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CourseID)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Title)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Credits)
+                    </th>
+                    <th>
+                        Department
+                    </th>
+                    <th></th>
+                </tr>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CourseID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Credits)
-        </th>
-        <th>
-            Department
-        </th>
-        <th></th>
-    </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CourseID)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Title)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Credits)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Department.Name)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.CourseID }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.CourseID }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.CourseID })
+                        </td>
+                    </tr>
+                }
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CourseID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Credits)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Department.Name)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.CourseID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.CourseID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.CourseID })
-            </td>
-        </tr>
-    }
-
-</table>
+            </table>
+            </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="aligncenter"><h2 class="aligncenter">课程体系<span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</h2></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="textbox clour1">
+                    <h3>Heading Course</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="textbox clour2">
+                    <h3>Heading Course</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="textbox clour3">
+                    <h3>Heading Course</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="textbox clour4">
+                    <h3>Heading Course</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="textbox clour5">
+                    <h3>Heading Course</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="textbox clour6">
+                    <h3>Heading Course</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+            <script>
+                $(active(1));
+            </script>
