--- a/ContosoUniversity/Views/Shared/_Layout.cshtml
+++ b/ContosoUniversity/Views/Shared/_Layout.cshtml
@@ -10,7 +10,29 @@
 </head>
 <body>
     <div id="wrapper">
-      
+        <header>
+            <div class="navbar navbar-default navbar-static-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="index.html"><img src="~/img/logo.png" alt="logo" /></a>
+                    </div>
+                    <div class="navbar-collapse collapse ">
+                        <ul id="topnav" class="nav navbar-nav">
+                            <li class="active">@Html.ActionLink("首页", "Index", "Home")</li>
+                            <li>@Html.ActionLink("课程", "Index", "Course")</li>
+                            <li>@Html.ActionLink("剪影", "Gallery", "Gallery")</li>
+                            <li>@Html.ActionLink("关于我们", "About", "Home")</li>
+                            <li>@Html.ActionLink("上传", "Index", "FileUpload")</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </header>
             @RenderBody()
             <hr />
             <footer>
