增加flip.js,用以添加课程介绍框动画

--- a/ContosoUniversity/Views/Course/Index.cshtml
+++ b/ContosoUniversity/Views/Course/Index.cshtml
@@ -25,19 +25,19 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <div class="textbox clour1">
+                <div class="textbox clour1 animated">
                     <h3>L(Learning)</h3>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="textbox clour2">
+                <div class="textbox clour2 animated">
                     <h3>T（Training）</h3>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="textbox clour3">
+                <div class="textbox clour3 animated">
                     <h3>M（Mentoring）</h3>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
                 </div>
@@ -70,3 +70,4 @@
             <script>
                 $(active(1));
             </script>
+
