--- a/ContosoUniversity/Views/FileUpload/Edit.cshtml
+++ b/ContosoUniversity/Views/FileUpload/Edit.cshtml
@@ -3,15 +3,21 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
-<ul class="nav nav-pills" role="tablist">
-      <li role="presentation"> @Html.ActionLink("添加", "Index", "FileUpload")</li>
-	   <li role="presentation"  class="active "> @Html.ActionLink("修改", "Edit", "FileUpload")</li>
-	 
-</ul>
+<section id="inner-headline">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<h2 class="pageTitle">图片库</h2>
+			</div>
+		</div>
+	</div>
+	</section>
+<div class="container">
+
 
 <!-- blueimp File Upload & Gallery styles -->
 @Styles.Render("~/Content/FileUpload")
+
 <script>
     var $form = null;
     $(function () {
@@ -31,7 +37,6 @@
         url: '/FileUpload/GetFileList',
         success: function (data) {
 
-
             $('#fileupload').fileupload().fileupload('option', 'done').call($('#fileupload'), $.Event('done'), { result: { files: data.files } })
             $('#fileupload').removeClass('fileupload-processing');
         }
@@ -42,6 +47,6 @@
 </script>
 
 @Html.Partial("_Files")
-
+</div>
 
 @Scripts.Render("~/bundles/FileUpload")
