--- a/ContosoUniversity/Views/Home/About.cshtml
+++ b/ContosoUniversity/Views/Home/About.cshtml
@@ -31,7 +31,7 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <img src="img/section-image-1.png" alt="">
+                    <img src="~/img/icoding/stem.jpg" alt="">
                     <div class="space"></div>
                 </div>
                 <div class="col-md-6">
