--- a/ContosoUniversity/Views/Course/Index.cshtml
+++ b/ContosoUniversity/Views/Course/Index.cshtml
@@ -15,6 +15,17 @@
 </section>
 <section id="content">
     <div class="container">
+	 <div class="row">
+            <div class="col-lg-offset-1 col-lg-2">
+                <img src="~/img/icoding/logoList_0000_scratch.png" alt="">
+            </div>
+			<div class="col-lg-offset-2 col-lg-2">
+                <img src="~/img/icoding/logoList_0001_arduino.png" alt="">
+            </div>
+			<div class="col-lg-offset-2 col-lg-2">
+                <img src="~/img/icoding/logoList_0002_raspberryPi.png" alt="">
+            </div>
+        </div>
         <div class="row">
             <div class="col-lg-12">
                 <div class="aligncenter"><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;">
