--- a/ContosoUniversity/Views/Home/Index.cshtml
+++ b/ContosoUniversity/Views/Home/Index.cshtml
@@ -161,8 +161,7 @@
     </div>
 </div>
 <section class="courses">
-    <div class="container">
-
+	<div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="aligncenter"><h2 class="aligncenter">课程体系</h2><h4><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</h4></div>
@@ -188,24 +187,15 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="textbox clour4">
-                    <h3>Heading Course</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-                </div>
+         <div class="row">
+            <div class="col-md-offset-1 col-md-2">
+                <img class="img-responsive"  src="~/img/icoding/logoList_0000_scratch.png" alt="">
             </div>
-            <div class="col-md-4">
-                <div class="textbox clour5">
-                    <h3>Heading Course</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-                </div>
+			<div class="col-md-offset-2 col-md-2">
+                <img class="img-responsive" src="~/img/icoding/logoList_0001_arduino.png" alt="">
             </div>
-            <div class="col-md-4">
-                <div class="textbox clour6">
-                    <h3>Heading Course</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
-                </div>
+			<div class="col-md-offset-2 col-md-2">
+                <img class="img-responsive"  src="~/img/icoding/logoList_0002_raspberryPi.png" alt="">
             </div>
         </div>
     </div>
