--- a/ContosoUniversity/Views/Course/Index.cshtml
+++ b/ContosoUniversity/Views/Course/Index.cshtml
@@ -28,29 +28,44 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="aligncenter"><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;">
-                    </span>icoding Academy【编程学园】团队从2014年开始进行STEM教育本土化的推广与实践，结合国际STEM发展及本土情况设计出一套以T（技术）为驱动，将校本课程与STEM教育结合的教学体系。该体系分为L(Learning)、T（Training）、M（Mentoring）三个阶段覆盖从小学、初中、高中整个学习阶段。
-                 
+                <div class="aligncenter">
+                    <h2 class="aligncenter">课程体系</h2><h4>
+                        <span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>icoding Academy团队从2014年开始进行STEM教育本土化的推广与实践，设计出一套以T（技术）为驱动，将校本教材与STEM教育结合的教学体系。该体系分为Maker（创客）、Geeker(极客)、Hacker（骇客）三个阶段覆盖从小学、初中、高中整个学习阶段。
+                    </h4>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4">
-                <div class="textbox clour1 animated">
-                    <h3>L(Learning)</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                <div class="textbox clour1">
+                    <h3>Maker（创客）</h3>
+                    <p>
+                        目标群体：2，3，4年级
+                        通过scratch+Picboard编程，进行软硬整合的基础学习。
+                        掌握编程基本思想，提高学生逻辑能力与计算能力，
+                        掌握声、光等基本传感器使用与原理。能够独立创造性开发
+                        植物大战僵尸等游戏。
+                    </p>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="textbox clour2 animated">
-                    <h3>T（Training）</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                <div class="textbox clour2">
+                    <h3>Geeker（极客） Course</h3>
+                    <p>
+                        目标群体：5，6，7年级
+                        通过scratch+ardunio编程，进行软硬整合的创造性学习。
+                        掌握软硬件的基本通信原理，提高学生逻辑计算能力，解决问题能力、创新能力
+                        掌握各种常见传感器基本原理与使用。能够创造性构建智能家居解决方案。
+                    </p>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="textbox clour3 animated">
-                    <h3>M（Mentoring）</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                <div class="textbox clour3">
+                    <h3>Hacker（骇客）</h3>
+                    <p>
+                        目标群体：8，9年级--高中生
+                        通过python+Raspberry Pi编程，进行系统的计算机科学知识学习。掌握python语言，熟悉数据挖掘与数据处理，基于Raspberry Pi构建物联网解决方案。同时为申请国内外STEM专业奠定基础。
+                    </p>
                 </div>
             </div>
         </div>
@@ -58,18 +73,18 @@
             <div class="row">
                 <div class="col-md-4 md-margin-bottom-40  bounceInRight animated">
                     <img class="img-responsive" src="~/img/service1.jpg" />
-                    <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>
+                    <h3>L（Learning）阶段</h3>
+                    <p>老师带领学生学习基本的理论知识，通过案例驱动进行学习。</p>
                 </div>
                 <div class="col-md-4   bounceInUp animated">
                     <img class="img-responsive" src="~/img/service2.jpg" />
-                    <h3>Mobile Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>
+                    <h3>T（Training）阶段</h3>
+                    <p>老师带领学生进行项目训练整合知识点，通过项目实战驱动学习。</p>
                 </div>
                 <div class="col-md-4 md-margin-bottom-40   bounceInLeft animated">
                     <img class="img-responsive" src="~/img/service3.jpg" />
-                    <h3>Responsive Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>
+                    <h3>M（Mentoring）阶段</h3>
+                    <p>学生进行团队设计、开发，老师辅之辅导，培养学生自主学习能力，创新能力，合作能力。 </p>
                 </div>
             </div>
 
