--- a/ContosoUniversity/Views/Shared/_Layout.cshtml
+++ b/ContosoUniversity/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <li>@Html.ActionLink("课程", "Index", "Course")</li>
                             <li>@Html.ActionLink("剪影", "Gallery", "Gallery")</li>
                             <li>@Html.ActionLink("关于我们", "About", "Home")</li>
-                            <li>@Html.ActionLink("上传", "Edit", "FileUpload")</li>
+                            @*<li>@Html.ActionLink("上传", "Edit", "FileUpload")</li>*@
                         </ul>
                     </div>
                 </div>
@@ -42,38 +42,40 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="widget">
-                                <h5 class="widgetheading">Our Contact</h5>
+                                <h5 class="widgetheading">联系方式</h5>
                                 <address>
-                                    <strong>Smart KidsInc</strong><br>
-                                    JC Main Road, Near Silnile tower<br>
-                                    Pin-21542 NewYork US.
+                                    <strong>Daniel </strong><br>
+                                    Shijiazhuang Hebei<br>
+                                    Yuhua
                                 </address>
                                 <p>
-                                    <i class="icon-phone"></i> (123) 456-789 - 1255-12584 <br>
-                                    <i class="icon-envelope-alt"></i> email@domainname.com
+                                    <i class="icon-phone"></i> 18132047903 <br>
+                                    <i class="icon-envelope-alt"></i> k12stem@163.com
                                 </p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="widget">
-                                <h5 class="widgetheading">Quick Links</h5>
+                                <h5 class="widgetheading">资源链接</h5>
                                 <ul class="link-list">
-                                    <li><a href="#">Latest Events</a></li>
-                                    <li><a href="#">Terms and conditions</a></li>
-                                    <li><a href="#">Privacy policy</a></li>
-                                    <li><a href="#">Career</a></li>
-                                    <li><a href="#">Contact us</a></li>
+                                    <li><a href="https://scratch.mit.edu/">scratch</a></li>
+                                    <li><a href="https://www.arduino.cc/">ardunio</a></li>
+                                    <li><a href="https://www.raspberrypi.org/">raspberry pi</a></li>
+                                    <li><a href="https://www.python.org">python</a></li>
+                                    <li><a href="https://www.codeclubworld.org/">codeclub</a></li>
+                                    <li><a href="https://code.org/">code.org</a></li>
+                                    
                                 </ul>
                             </div>
                         </div>
 
                         <div class="col-lg-4">
                             <div class="widget">
-                                <h5 class="widgetheading">Recent News</h5>
+                                <h5 class="widgetheading">微信订阅号</h5>
                                 <ul class="link-list">
-                                    <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-                                    <li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-                                    <li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
+                                    <li><a href="#">
+                                            <img src="~/img/qrcode.jpg" /></a></li>
+                                  
                                 </ul>
                             </div>
                         </div>
@@ -85,7 +87,11 @@
                             <div class="col-lg-6">
                                 <div class="copyright">
                                     <p>
-                                        <span>Copyright &copy; 2016.Company name All rights reserved.<a target="_blank" href="http://www.icodingplay.com/">www.icodingplay.com</a></span>
+                                        <span>Copyright &copy; 2016.Company name All rights reserved.</span>
+                                    </p>
+                                    <p><a target="_blank" href="http://www.4k12stem.com">http://www.4k12stem.com</a></p>
+                                    <p>
+                                        <span><a target="_blank" href="http://www.miitbeian.gov.cn">冀ICP备16024853号</a></span>
                                     </p>
                                 </div>
                             </div>
