--- a/ContosoUniversity/Views/Home/About.cshtml
+++ b/ContosoUniversity/Views/Home/About.cshtml
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="pageTitle">About Us</h2>
+                <h2 class="pageTitle">了解我们</h2>
             </div>
         </div>
     </div>
@@ -21,9 +21,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="about-logo">
-                        <h3>We are awesome <span class="color">TEAM</span></h3>
-                        <p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas</p>
-                        <p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas</p>
+                        <h3>We are awesome <span class="color">我们的团队</span></h3>
+                        <p>团队成员主要来自于中英两国，团队成员在不同文化中交流碰撞，用国际化的视野设计产品，将先进的理念
+与本土化实施紧密融合，将STEM教育精髓深深浸入整个产品设计研发中。
+</p>
+                        
                     </div>
                 </div>
             </div>
@@ -35,8 +37,14 @@
                     <div class="space"></div>
                 </div>
                 <div class="col-md-6">
-                    <p>Lorem ipsum dolor sit amet, cadipisicing  sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium, ut unde fuga error commodi architecto, laudantium culpa tenetur at id, beatae pet.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. adipisicing  sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium,m deserunt.</p>
+                    <p>
+                        我们的宗旨：
+                        快乐学习：编个游戏就可以将数学、物理、英语等等知识进行整合，在创作中学习，在应用中学习，在玩中学习。
+                        全球视野：编写的游戏可以和全世界分享，同时可以学习全世界的作品。在学习中交流，在交流中学习，从而培养全球视野。
+                        掌控未来：未来社会是一个人工智能高度发展，机器人横行的时代，计算机素养将是未来重要技能
+                       
+                    </p>
+                           <p> 因材施教：5人小班教学，个性化针对性指导。</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Lorem ipsum enimdolor sit amet</li>
                         <li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Explicabo deleniti neque aliquid</li>
@@ -53,13 +61,17 @@
                 <div class="col-md-4">
                     <!-- Heading and para -->
                     <div class="block-heading-two">
-                        <h3><span>Why Choose Us?</span></h3>
+                        <h3><span>为什么要选择我们？</span></h3>
                     </div>
-                    <p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur. <br /><br />Sed ut perspiciaatis iste natus error sit voluptatem probably haven't heard of them accusamus.</p>
+                    <p>1、团队成员有很深的教育教学背景，深谙教育理念与精髓<br />
+2、团队成员有很深的技术背景，团队成员都是各自领域的优秀人才<br />
+3、团队成员有很国际化的视野，将来孩子的面对竞争一定是全球化的竞争。<br />
+                        我们用专家级的技术用专业的态度专心做STEM教育！
+</p>
                 </div>
                 <div class="col-md-4">
                     <div class="block-heading-two">
-                        <h3><span>Our Solution</span></h3>
+                        <h3><span>支撑体系</span></h3>
                     </div>
                     <!-- Accordion starts -->
                     <div class="panel-group" id="accordion-alt3">
@@ -129,31 +141,31 @@
 
                 <div class="col-md-4">
                     <div class="block-heading-two">
-                        <h3><span>Our Expertise</span></h3>
+                        <h3><span>我们的优势</span></h3>
                     </div>
-                    <h6>Web Development</h6>
+                    <h6>教育</h6>
                     <div class="progress pb-sm">
                         <!-- White color (progress-bar-white) -->
-                        <div class="progress-bar progress-bar-red" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                            <span class="sr-only">40% Complete (success)</span>
+                        <div class="progress-bar progress-bar-red" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                            <span class="sr-only">80% Complete (success)</span>
                         </div>
                     </div>
-                    <h6>Designing</h6>
+                    <h6>设计</h6>
                     <div class="progress pb-sm">
-                        <div class="progress-bar progress-bar-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                            <span class="sr-only">40% Complete (success)</span>
+                        <div class="progress-bar progress-bar-green" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                            <span class="sr-only">60% Complete (success)</span>
                         </div>
                     </div>
-                    <h6>User Experience</h6>
+                    <h6>团队</h6>
                     <div class="progress pb-sm">
                         <div class="progress-bar progress-bar-lblue" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                            <span class="sr-only">40% Complete (success)</span>
+                            <span class="sr-only">80% Complete (success)</span>
                         </div>
                     </div>
-                    <h6>Development</h6>
+                    <h6>开发</h6>
                     <div class="progress pb-sm">
-                        <div class="progress-bar progress-bar-yellow" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
-                            <span class="sr-only">40% Complete (success)</span>
+                        <div class="progress-bar progress-bar-yellow" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                            <span class="sr-only">60% Complete (success)</span>
                         </div>
                     </div>
                 </div>
@@ -166,7 +178,7 @@
             <!-- Our Team starts -->
             <!-- Heading -->
             <div class="block-heading-six">
-                <h3 class="bg-color">Our Team</h3>
+                <h3 class="bg-color">我们的团队</h3>
             </div>
             <br>
 
@@ -178,40 +190,41 @@
                         <!-- Team Member -->
                         <div class="team-member">
                             <!-- Image -->
-                            <img class="img-responsive" src="img/team1.jpg" alt="">
+                            <img class="img-responsive" src="~/img/tom.jpg" alt="">
+                     
                             <!-- Name -->
-                            <h4>Johne Doe</h4>
-                            <span class="deg">Creative</span>
+                            <h4>TOM </h4>
+                            <span class="deg">课程规划师及顾问</span>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <!-- Team Member -->
                         <div class="team-member">
                             <!-- Image -->
-                            <img class="img-responsive" src="img/team2.jpg" alt="">
+                            <img class="img-responsive" src="~/img/Allen.jpg" alt="">
                             <!-- Name -->
-                            <h4>Jennifer</h4>
-                            <span class="deg">Programmer</span>
+                            <h4>Allen </h4>
+                            <span class="deg">K12 coding技术研发</span>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <!-- Team Member -->
                         <div class="team-member">
                             <!-- Image -->
-                            <img class="img-responsive" src="img/team3.jpg" alt="">
+                            <img class="img-responsive" src="~/img/Cathy.jpg" alt="">
                             <!-- Name -->
-                            <h4>Christean</h4>
-                            <span class="deg">CEO</span>
+                            <h4>Cathy </h4>
+                            <span class="deg">课程艺术指导</span>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <!-- Team Member -->
                         <div class="team-member">
                             <!-- Image -->
-                            <img class="img-responsive" src="img/team4.jpg" alt="">
+                            <img class="img-responsive" src="~/img/Daniel.jpg" alt="">
                             <!-- Name -->
-                            <h4>Kerinele rase</h4>
-                            <span class="deg">Manager</span>
+                            <h4>Daniel </h4>
+                            <span class="deg">技术与教材研发与课程实施</span>
                         </div>
                     </div>
                 </div>
