--- a/ContosoUniversity/Views/Home/Index.cshtml
+++ b/ContosoUniversity/Views/Home/Index.cshtml
@@ -13,44 +13,43 @@
                 </li>
                 <li data-slide-to="3" data-target="#carousel-673613">
                 </li>
-                <li data-slide-to="4" data-target="#carousel-673613">
-                </li>
+              
             </ol>
             <div class="carousel-inner">
-                <div class="item ">
-                    <img src="/img/slides/5.jpg" alt="" />
+                <div class="item active">
+                    <img src="~/img/slides/scratch.jpg" alt="" />
                     <div class="carousel-caption ">
                         <div class="item_introtext">
-                            <strong>创造万物</strong>
-                            <p>做智能时代的掌控者</p>
+                            <strong>创客</strong>
+                            <p>scratch  创造游戏</p>
                         </div>
                     </div>
                 </div>
-                <div class="item active">
-                    <img src="/img/slides/2.jpg" alt="" />
+                <div class="item ">
+                    <img src="~/img/slides/arduino.jpg" alt="" />
                     <div class="flex-caption">
                         <div class="item_introtext">
-                            <strong>起来</strong>
-                            <p>不愿做手机奴的人们</p>
+                            <strong>极客 </strong>
+                            <p>ardunio  改变世界</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="item">
-                    <img src="/img/slides/6.jpg" alt="" />
+                    <img src="~/img/slides/python.jpg" alt="" />
                     <div class="flex-caption">
                         <div class="item_introtext">
-                            <strong>来吧</strong>
-                            <p>我们等你</p>
+                            <strong>骇客    </strong>
+                            <p>python   颠覆世界</p>
                         </div>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="/img/slides/7.jpg" alt="" />
+                    <img src="~/img/slides/wait.jpg" alt="" />
                     <div class="carousel-caption">
                         <div class="item_introtext">
-                            <strong>创造万物</strong>
-                            <p>做智能时代的掌控者</p>
+                            <strong>来吧</strong>
+                            <p>我们等你</p>
                         </div>
                     </div>
                 </div>
@@ -68,7 +67,10 @@
                 <div class="aligncenter">
                     <h1 class="aligncenter">
                         IcodingAcademy
-                    </h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.
+                    </h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>2014年1月于长沙成立，现已经有长沙、兰州、石家庄三个学习中心。
+团队成员主要来自于中英两国，团队研发出一套适合从小学到高中STEM教育学习体系，让学生通过技术（coding）进行跨学科整合性的学习，培养学生计算机科学素养，提高学生学习兴趣及课本知识应用能力，
+激发学生创造与创新力，从而让学生成为未来人工智能时代的主人。
+
                 </div>
             </div>
         </div>
@@ -84,22 +86,22 @@
                         <span class="icons">
                             <img class="wow rollIn " src="~/img/stem-1.png">
                         </span> <div class="box-area wow swing" data-wow-iteration="2" >
-                        <h3>Science</h3> <p>科学：这是什么，这是为什么？</p>
+                        <h3>Science</h3> <p>通过编程探索科学真理</p>
                         </div>
                     </div>
                     <div class="col-md-3 text-center">
                         <span class="icons"><img class="wow rollIn "  src="~/img/stem-2.png"></span> <div class="box-area wow swing" data-wow-iteration="2">
-    <h3>Technology</h3> <p>技术：这是怎么做出来的。我要做</p>
+    <h3>Technology</h3> <p>通过编程掌握计算机科学素养</p>
 </div>
                     </div>
                     <div class="col-md-3 text-center">
                         <span class="icons"><img class="wow bounceInRight " src="~/img/stem-3.png"></span> <div class="box-area wow swing" data-wow-iteration="2">
-    <h3>Engineering</h3> <p>工程：挽起袖子开始干吧</p>
+    <h3>Engineering</h3> <p>通过软硬整合提升工程设计构建能力</p>
 </div>
                     </div>
                     <div class="col-md-3 text-center">
                         <span class="icons"><img class="wow bounceInRight "  src="~/img/stem-4.png"></span> <div class="box-area wow swing" data-wow-iteration="2">
-    <h3>Mathematics</h3> <p>数学：这样做才对，这样做才准确</p>
+    <h3>Mathematics</h3> <p>通过编程融汇贯通数学知识</p>
 </div>
                     </div>
                 </div>
@@ -162,26 +164,38 @@
 	<div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="aligncenter"><h2 class="aligncenter">课程体系</h2><h4><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</h4></div>
+                <div class="aligncenter"><h2 class="aligncenter">课程体系</h2><h4><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>icoding Academy团队从2014年开始进行STEM教育本土化的推广与实践，设计出一套以T（技术）为驱动，将校本教材与STEM教育结合的教学体系。该体系分为Maker（创客）、Geeker(极客)、Hacker（骇客）三个阶段覆盖从小学、初中、高中整个学习阶段。
+                    </h4></div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4">
                 <div class="textbox clour1">
-                    <h3>Heading Course</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                    <h3>Maker（创客）</h3>
+                    <p>目标群体：2，3，4年级
+通过scratch+Picboard编程，进行软硬整合的基础学习。
+掌握编程基本思想，提高学生逻辑能力与计算能力，
+掌握声、光等基本传感器使用与原理。能够独立创造性开发
+植物大战僵尸等游戏。
+</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="textbox clour2">
-                    <h3>Heading Course</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                    <h3>Geeker（极客） Course</h3>
+                    <p>目标群体：5，6，7年级
+通过scratch+ardunio编程，进行软硬整合的创造性学习。
+掌握软硬件的基本通信原理，提高学生逻辑计算能力，解决问题能力、创新能力
+掌握各种常见传感器基本原理与使用。能够创造性构建智能家居解决方案。
+</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="textbox clour3">
-                    <h3>Heading Course</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                    <h3>Hacker（骇客）</h3>
+                    <p>目标群体：8，9年级--高中生
+通过python+Raspberry Pi编程，进行系统的计算机科学知识学习。掌握python语言，熟悉数据挖掘与数据处理，基于Raspberry Pi构建物联网解决方案。同时为申请国内外STEM专业奠定基础。
+</p>
                 </div>
             </div>
         </div>
