--- a/ContosoUniversity/Views/Home/Index.cshtml
+++ b/ContosoUniversity/Views/Home/Index.cshtml
@@ -66,7 +66,7 @@
             <div class="col-lg-12">
                 <div class="aligncenter">
                     <h1 class="aligncenter">
-                        IcodingAcademy
+                        icodingAcademy
                     </h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>2014年1月于长沙成立，现已经有长沙、兰州、石家庄三个学习中心。
 团队成员主要来自于中英两国，团队研发出一套适合从小学到高中STEM教育学习体系，让学生通过技术（coding）进行跨学科整合性的学习，培养学生计算机科学素养，提高学生学习兴趣及课本知识应用能力，
 激发学生创造与创新力，从而让学生成为未来人工智能时代的主人。
@@ -136,18 +136,18 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item">
-                        <p> 孩子在快乐的时候，他学习任何东西都比较容易。<p>
-                            <b>——斯宾塞(英)</b>
+                        <p> 如果你不首先培养活泼的儿童，你就绝不能教出聪明的人来。<p>
+                            <b>——卢梭(法)</b>
                         </p>
                     </div>
                     <div class="item">
-                        <p>如果学习只在模仿，那么我们就不会有科学，就不会有技术。　<p>
-                            <b>——高尔基(俄)</b>
+                        <p>我觉得每个人都应该学习一门编程语言。学习编程教你如何思考，就像学习法律一样。学法律并不一定要做律师，但法律教你一种思考方式。学习编程也是一样，我把计算科学看成教育，每个人都应该至少1年时间学习编程　<p>
+                            <b>——乔布斯(美)</b>
                         </p>
                     </div>
                     <div class="item active">
-                        <p>让学生体验到一种自己在亲身参与掌握知识的情感，乃是唤起少年特有的对知识的兴趣的重要条件。当一个人不仅在认识世界，而且在认识自我的时候，就能形成兴趣。没有这种自我肯定的体验，就不可能有对知识的真正的兴趣。” <p>
-                            <b>——苏霍姆林斯基(苏)</b>
+                        <p>想象力比知识更重要，因为知识是有限的，而想象力概括着世界的一切，推动着进步，并且是知识进化的源泉。严格地说，想象力是科学研究中的实在因素。 <p>
+                            <b>——阿尔伯特.爱因斯坦(美)</b>
                         </p>
                     </div>
                     <div class="item">
@@ -164,7 +164,7 @@
 	<div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="aligncenter"><h2 class="aligncenter">课程体系</h2><h4><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>icoding Academy团队从2014年开始进行STEM教育本土化的推广与实践，设计出一套以T（技术）为驱动，将校本教材与STEM教育结合的教学体系。该体系分为Maker（创客）、Geeker(极客)、Hacker（骇客）三个阶段覆盖从小学、初中、高中整个学习阶段。
+                <div class="aligncenter"><h2 class="aligncenter" style="background:#ff6a00">课程体系</h2><h4><span class="clear spacer_responsive_hide_mobile " style="height:15px;display:block;font-family:KaiTi;font-size:medium"></span>icoding Academy团队从2014年开始进行STEM教育本土化的推广与实践，设计出一套以T（技术）为驱动，将校本教材与STEM教育结合的教学体系。该体系分为Maker（创客）、Geeker(极客)、Hacker（骇客）三个阶段覆盖从小学、初中、高中整个学习阶段。
                     </h4></div>
             </div>
         </div>
