--- a/ContosoUniversity/Views/Gallery/gallery.cshtml
+++ b/ContosoUniversity/Views/Gallery/gallery.cshtml
@@ -8,7 +8,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<h2 class="pageTitle">Gallery</h2>
+				<h2 class="pageTitle">视频</h2>
 			</div>
 		</div>
 	</div>
@@ -24,14 +24,14 @@
 					<div id="thumbs">
 						<!-- Item Project and Filter Name -->
 						<div class="item-thumbs col-lg-3 col-md-4 col-sm-4 work design" data-id="id-0" data-type="web"> 						
-					     <a class="work-box fancybox" data-fancybox-group="gallery" target="_blank" title="Gallery name" href="~/img/works/1.jpg">						
+					     <a class="work-box fancybox" data-fancybox-group="gallery"  title="Gallery name" data-toggle="modal" data-target="#myModal1">						
 						   <div class="overlay">
 							  <div class="overlay-caption">
 								<p><span class="fa fa-search"></span></p>
 							  </div>
 							</div>							
 						</a> 
-						<img src="~/img/works/1.jpg" alt="">													 
+						<img src="~/img/works/1.jpg" alt="" >													 
 						</div>
 						<!-- End Item Project -->	
 						<!-- Item Project and Filter Name -->
@@ -114,6 +114,23 @@
 					
                         </div>
                         </section>
+                    <section id="videos">
+                        @*视频模板，添加时更改id*@
+                       <div id="myModal1" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                            <div class="modal-dialog " style="width:1085px;">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                        <h4 class="modal-title" id="myModalLabel">为什么要学编程</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        @*在这里放置视频*@
+                                        <iframe frameborder="0" width="1024" height="768" src="http://v.qq.com/iframe/player.html?vid=g0315wa8u99&tiny=0&auto=0" allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 			</div>
         </div>
             </div>
