--- a/ContosoUniversity/Views/Shared/_Layout.cshtml
+++ b/ContosoUniversity/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <ul id="topnav" class="nav navbar-nav">
                             <li class="active">@Html.ActionLink("首页", "Index", "Home")</li>
                             <li>@Html.ActionLink("课程", "Index", "Course")</li>
-                            <li>@Html.ActionLink("剪影", "Gallery", "Gallery")</li>
+                            <li>@Html.ActionLink("视频", "Gallery", "Gallery")</li>
                             <li>@Html.ActionLink("关于我们", "About", "Home")</li>
                             @*<li>@Html.ActionLink("上传", "Edit", "FileUpload")</li>*@
                         </ul>
@@ -44,7 +44,7 @@
                             <div class="widget">
                                 <h5 class="widgetheading">联系方式</h5>
                                 <address>
-                                    <strong>Daniel </strong><br>
+                                   
                                     Shijiazhuang Hebei<br>
                                     Yuhua
                                 </address>
@@ -84,18 +84,20 @@
                 <div id="sub-footer">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-6">
-                                <div class="copyright">
-                                    <p>
-                                        <span>Copyright &copy; 2016.Company name All rights reserved.</span>
-                                    </p>
-                                    <p><a target="_blank" href="http://www.4k12stem.com">http://www.4k12stem.com</a></p>
-                                    <p>
-                                        <span><a target="_blank" href="http://www.miitbeian.gov.cn">冀ICP备16024853号</a></span>
-                                    </p>
+                            <div class="col-lg-12">
+                                <div class="copyright"  >
+                                    <div style="text-align:center">
+                                        <p>
+                                            <span>Copyright &copy; 2016.icoding Academy版权所有.</span>
+                                        </p>
+                                        
+                                        <p>
+                                            <span><a target="_blank" href="http://www.miitbeian.gov.cn">冀ICP备16024853号</a></span>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            @*<div class="col-lg-6">
                                 <ul class="social-network">
                                     <li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
@@ -103,7 +105,7 @@
                                     <li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
                                     <li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
                                 </ul>
-                            </div>
+                            </div>*@
                         </div>
                     </div>
                 </div>
